--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,7 @@
 
     <application
         android:icon="@drawable/ic_launcher"
+        android:debuggable="true"
         android:label="@string/app_name" >
         <activity
             android:label="@string/app_name"
