--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,14 +7,20 @@
     <uses-sdk android:minSdkVersion="8" />
 
     <application
-        android:icon="@drawable/ic_launcher"
         android:debuggable="true"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar"
+            android:name=".AcroActivity"
             android:screenOrientation="portrait"
-            android:name=".AcroActivity" >
+            android:theme="@android:style/Theme.NoTitleBar"/>
+        
+        <activity
+            android:label="@string/app_name"
+            android:name=".LoginActivity"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,6 +29,6 @@
         </activity>
     </application>
 
-        <uses-permission android:name="android.permission.INTERNET"/>
-        
+    <uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
