--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,8 +14,8 @@
             android:label="@string/app_name"
             android:name=".AcroActivity"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar"/>
-        
+            android:theme="@android:style/Theme.NoTitleBar" >
+        </activity>
         <activity
             android:label="@string/app_name"
             android:name=".LoginActivity"
