--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,13 +15,22 @@
             android:name=".AcroActivity"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
+
+        </activity>
+        
+                    <activity
+            android:label="@string/app_name"
+            android:name=".ConfigActivity"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar" >
+
         </activity>
         <activity
             android:label="@string/app_name"
             android:name=".LoginActivity"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
-            <intent-filter >
+                        <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
