--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.happytap.acro"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="2"
+    android:versionName="1.0.1" >
 
     <uses-sdk android:minSdkVersion="8" />
 
     <application
-        android:debuggable="true"
+        
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
@@ -39,5 +39,6 @@
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
 </manifest>
